<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:contentDescription="Logo"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/description_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="24dp"
                android:text="GhostCam V10.24"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="30sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/switch1_text"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="8dp"
                android:minHeight="48dp"
                android:padding="8dp"
                app:thumbTint="@color/switch_thumb_color_custom"
                app:trackTint="@color/switch_track_selector_custom" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/switch2_text"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="8dp"
                android:minHeight="48dp"
                android:padding="8dp"
                app:thumbTint="@color/switch_thumb_color_custom"
                app:trackTint="@color/switch_track_selector_custom" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/switch3_text"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="8dp"
                android:minHeight="48dp"
                android:padding="8dp"
                app:thumbTint="@color/switch_thumb_color_custom"
                app:trackTint="@color/switch_track_selector_custom" />
        </RelativeLayout>


        <Button
            android:id="@+id/select_video_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:background="@color/holo_blue_dark"
            android:padding="12dp"
            android:text="@string/select_video_button_text"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/select_app_text"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/app_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:minHeight="48dp"
            android:padding="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/exit_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@color/holo_blue_dark"
                android:padding="12dp"
                android:text="@string/exit_button_text"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/create_ghostcam_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@color/holo_blue_dark"
                android:padding="12dp"
                android:text="@string/create_ghostcam_button_text"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>